--- a/MvcApplication1/Views/Album/Index.cshtml
+++ b/MvcApplication1/Views/Album/Index.cshtml
@@ -13,3 +13,7 @@
 {
     <div>@album.Name by @album.Artist (@album.Genre)</div>
 }
+
+<p>
+    @Html.ActionLink("Add new", "Add", "Album") Album
+</p>
